<resources>
    <string name="app_name">SETP BoardBuddy</string>
    <string name="Play_Matchmaking">Play Matchmaking 🎲</string>
    <string name="Group_Events">Group Events 👨‍👩‍👧‍👦</string>
    <string name="Map">Map</string>
    <string name="Settings">Settings ⚙️</string>
    <string name="My_Matches">My Matches 📝</string>
    <string name="BoardBuddy">BOARD BUDDY</string>

    <string name="Profile">🧔</string>
    <string name="CB_Mode">Colour Blind Mode</string>
    <string name="txtSetting">Text Size: </string>
    <string name="Event_page">Events</string>
    <string name="Back_button">Back</string>
    <string name="Showing_for_Location">Showing for Location:</string>
    <string name="Play">Play</string>

...
