...
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="⬅️" />

    <Button
        android:id="@+id/btnCBMode"
        android:layout_width="373dp"
        android:layout_height="68dp"
        android:background="#C8E6E6"
        android:text="@string/CB_Mode"
        android:textColor="@android:color/black"
        android:textSize="20sp"
...
