<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/circle_button"
        android:onClick="Profile"
        android:text="@string/Profile"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="165dp"
        android:layout_height="200dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:background="#C8E6E6"
        android:onClick="Settings"
        android:text="@string/Settings"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGroupEvents"
        android:layout_width="165dp"
        android:layout_height="200dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="300dp"
        android:background="#C8E6E6"
        android:onClick="GroupEvents"
        android:text="@string/Group_Events"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMyMatches"
        android:layout_width="165dp"
        android:layout_height="200dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:background="#C8E6E6"
        android:onClick="MyMatches"
        android:text="@string/My_Matches"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPlayMatchmaking"
        android:layout_width="165dp"
        android:layout_height="200dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="80dp"
        android:background="#C8E6E6"
        android:onClick="PlayMatchmaking"
        android:text="@string/Play_Matchmaking"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BoardBuddy"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/btnMap"
        android:layout_width="250dp"
        android:layout_height="95dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/googlemap"
        android:onClick="Map"
        android:text="@string/Map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>